--- a/package.json
+++ b/package.json
@@ -72,9 +72,9 @@
     "next-themes": "^0.4.6",
     "openai": "^4.97.0",
     "pdf-parse": "^1.1.1",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-day-picker": "^8.10.1",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^19.1.1",
+    "react-day-picker": "9.8.1",
+    "react-dom": "19.1.1",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.53.1",
     "react-icons": "^5.3.0",
@@ -94,8 +94,8 @@
     "@clerk/types": "^4.35.0",
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20.19.1",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.7",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
