--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 AI_API_KEY="your_api_key"
-POSTGRES_URL="postgresql://postgres:example@localhost:5432/postgres"
+DATABASE_URL="postgresql://postgres:example@localhost:5432/postgres"
 AUTH_GOOGLE_ID=your-google-client-id
 AUTH_GOOGLE_SECRET=your-google-client-secret
 AUTH_SECRET="your-auth-secret"
@@ -7,3 +7,15 @@ AUTH_SECRET="your-auth-secret"
 REDIS_URL="redis://localhost:6379"
 
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
+BITRIX24_WEBHOOK=""
+NEXT_PUBLIC_WEBSOCKET_URL=""
+GOOGLE_AI_API_KEY=""
+EXA_API_KEY=""
+
+# Firebase Config
+NEXT_PUBLIC_FIREBASE_API_KEY=""
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=""
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=""
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=""
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=""
+NEXT_PUBLIC_FIREBASE_APP_ID=""
