--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@ai-sdk/openai": "^1.3.20",
     "@ai-sdk/react": "^1.2.9",
     "@auth/prisma-adapter": "^2.7.4",
-    "@clerk/nextjs": "^6.5.1",
     "@hookform/resolvers": "^3.9.1",
     "@prisma/client": "^6.1.0",
     "@radix-ui/react-accordion": "^1.2.1",
@@ -67,14 +66,14 @@
     "input-otp": "^1.4.1",
     "lucide-react": "^0.456.0",
     "mammoth": "^1.8.0",
-    "next": "15.0.3",
+    "next": "^15.4.6",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.6",
     "openai": "^4.97.0",
     "pdf-parse": "^1.1.1",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-day-picker": "^8.10.1",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "19.1.1",
+    "react-day-picker": "^9.8.1",
+    "react-dom": "19.1.1",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.53.1",
     "react-icons": "^5.3.0",
@@ -92,11 +91,10 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@clerk/types": "^4.35.0",
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20.19.1",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
