--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@auth/prisma-adapter": "^2.7.4",
     "@clerk/nextjs": "^6.5.1",
     "@google-cloud/pubsub": "^5.2.0",
+    "@google-cloud/storage": "^7.17.2",
     "@hookform/resolvers": "^3.9.1",
     "@pinecone-database/pinecone": "^6.1.2",
     "@prisma/client": "^6.18.0",
